# Tusk-Board

./: Dockerfile  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py
