[tool.poetry]
name = "tuskboard"
version = "0.1.0"
description = "Lite and functional demo tusk board web-app"
authors = ["Mark Standriichuk"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
